# eightify

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.md  README.md  pyproject.toml
src/eightify/: __init__.py  app.py  cloud_app.py  common.py  config.py  main.py  old_app.py  simple_app.py  types.py  utils.py
src/eightify/api/: llm.py  openai.py  youtube.py
src/eightify/api/llm/: __init__.py  base.py  comments.py  summary.py
tests/: test_utils.py
tests/api/: test_llm.py  test_openai.py  test_youtube.py
