[project]
name = "eightify"
version = "0.1.0"
description = "Eightify is a tool to quickly gain insights from YouTube videos."
authors = [{ name = "lainisourgod", email = "beaverloverock@gmail.com" }]
dependencies = [
    "fastapi>=0.111.0",
    "pydantic>=2.7.4",
    "openai>=1.35.4",
    "youtube-transcript-api>=0.6.2",
    "google-api-python-client>=2.134.0",
    "python-dotenv>=1.0.1",
    "loguru>=0.7.2",
    "streamlit>=1.36.0",
    "requests>=2.32.3",
    "anthropic>=0.30.0",
    "pydantic-settings>=2.3.4",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ruff>=0.4.10", "pre-commit>=3.7.1", "pytest>=8.2.2"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["eightify"]


[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/eightify"]
